
/*
 * netMonitor.h
 *
 *  Created on: 2015-11-22
 *      Author: patw
 */

#ifndef _NETMONITOR_H_
#define _NETMONITOR_H_

#include <iostream>
#include <vector>
#include <unordered_map>
#include <stdlib.h>
#include <string.h>

using namespace std;

class NetMonitor {
public:
    NetMonitor();
    ~NetMonitor();
private:
};

#endif /* _NETMONITOR_H_ */

